greeting/greeting-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-greeting-pod
  labels:
    app: kube-greeting-pod
    environment: dev
    colour: black
spec:
  containers:
  - name: kube-greeting
    image: docker-registry.dun.fh/findmypast/kube-greeting:kubet1.3 
    command: ['node', 'server.js']
    ports:
      - containerPort: 3000
